[package]
name = "simple_nats_client"
version = "0.1.0"
authors = ["itn3000 <itn3000@gmail.com>"]
license-file = "LICENSE"
documentation = "https://github.com/itn3000/simple_nats_client"
homepage = "https://github.com/itn3000/simple_nats_client"
repository = "https://github.com/itn3000/simple_nats_client"
description = "simple NATS client"

[dependencies]
serde_json="1.0"
serde_derive="1.0"
serde="1.0"
log="0.3"

[dev-dependencies]
env_logger="0.3"
